# mempocket

./: .gitignore  DEVLOG.md  README.md  prd.md  pyproject.toml
api/: __init__.py  main.py  routes.py
mem/: __init__.py  agent.py  cli.py  config.py  models.py  pipeline.py  store.py
pcms/: agent.py  cli.py  config.py  pipeline.py  store.py  tools.py
tests/: __init__.py  test_cli.py  test_models.py  test_store.py
web/: .gitignore  package-lock.json  package.json  tailwind.config.js
web/app/: globals.css  layout.tsx  page.tsx
web/app/entries/: page.tsx
web/app/entries/[id]/: page.tsx
web/app/proposals/: page.tsx
web/components/: AddModal.tsx  EntryCard.tsx  MarkdownView.tsx  ProposalCard.tsx  SearchBar.tsx  Sidebar.tsx
web/lib/: api.ts
