[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mempocket"
version = "0.1.0"
description = "A lightweight personal context memory system"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "everlasting" }
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "python-slugify>=8.0.0",
    "anthropic>=0.40.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
mem = "mem.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["mem"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
